# ComfyGen

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: publish-pypi.yml
automation/: smoke_preset.py  validate_workflow.py  wait_for_rollout.py
comfy_gen/: _progress_format.py  cli.py  config.py  download.py  hash_files.py  init.py  install_preset.py  list_models.py  object_info.py  output.py  poller.py  query_info.py  runpod_api.py  serverless.py  storage.py
docs/: publishing.md  quickstart.md
examples/: sdxl_turbo_portrait.json
tests/: conftest.py  test_check_models_exist.py  test_civitai_progress.py  test_delete_handler.py  test_download_handler.py  test_hash_handler.py  test_health_handler.py  test_install_preset_cli.py  test_installer_server.py  test_list_handler.py  test_node_installer_resolve.py  test_preset_resolver.py  test_progress_format.py  test_smoke_preset.py  test_validate_workflow.py  test_volume_info_handler.py  test_worker_download_grace.py
