[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-gen"
version = "0.2.0"
description = "Agent-first CLI for executing ComfyUI workflows on RunPod serverless"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["comfyui", "runpod", "serverless", "image-generation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
comfy-gen = "comfy_gen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
include = ["comfy_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["serverless-runtime"]
asyncio_mode = "auto"
